# handwrite-app

./: .env-export  .gitmodules  Aptfile  Cargo.toml  Dockerfile  Procfile  README.md  requirements.txt
.heroku/: run.sh
handwriter_client/: Cargo.toml  build_vercel.sh  index.html
handwriter_client/src/: app.rs  main.rs
handwriter_client/src/components/: home.rs  mod.rs  raw_html.rs  wrimage.rs
handwriter_server/: .gitignore  Cargo.toml
handwriter_server/logs/: log_2021-03-21_10-47.txt
handwriter_server/src/: main.rs  server.rs  worker.rs
handwriter_shared/: Cargo.toml
handwriter_shared/src/: lib.rs
logs/: log_2021-03-21_11-50.txt
src/: main.rs
