[package]
name = "handwriter_client"
version = "0.1.0"
authors = ["Deep Gaurav <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handwriter_shared = {path = "../handwriter_shared"}
yew = "0.17"
log = "0.4.6"
yewtil = "0.3"
wasm-logger = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1.6"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
]